--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ h1, p, a {
 
 div img {
     border-radius: 50%;
-    margin-bottom: 24px;
+    margin-bottom: 14px;
+    
 }
 
 div h1 {
@@ -65,7 +66,7 @@ div a {
 }
 
 div a:hover {
-    background: linear-gradient(to left #e01616, #be0000);
+    background-color: #b60101;
     color: #141414;
     transition: 0.5s;
 }
